Enhance ticket processing feature: integrate Google Drive API for ticket retrieval, add error handling, and implement user feedback messages; update templates for improved user experience.

--- a/config/.env
+++ b/config/.env
@@ -15,3 +15,6 @@ DB_USER=finanzas_user
 DB_PASSWORD=zLf,)uXZma5H0mG5
 DB_HOST=127.0.0.1
 DB_PORT=3306
+
+GEMINI_API_KEY="AIzaSyAMli9iQZprw6cG1M-bHuiWk_n7YYiHmrU"
+CONVERT_API_KEY="XiVzWBWz9GsIq97F8qfp6g8od60XVq3f"
